# espidf-component-smopla

smopla/: CMakeLists.txt  devicemanager.cc  http_handlers.cc
smopla/include/: HAL_labathomeV10.hh  HAL_labathomeV5.hh  functionblocks.hh
